tests/src/frontend/typechecking/invalid/pattern_nested_literal.sk
fun main(): void {
  p = (42, "Fail");
  print_raw(
    p match {
    | (x @ "Fail", y @ _) -> x + y
    },
  )
}
